gl31-master/src/test/deca/context/valid/complet/sous_type.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 19/01/2021
class A{}
class B extends A{}
{
    A a = new A();
    a = new B();
}
