gl31-master/src/test/deca/context/invalid/complet/no_convert.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 17: Erreur, la classe A n'a pas accès à methB
//
// Historique:
//    cree le 21/01/2021
class A{}
class B{}
{
    A a = new A();
    a = new B();
}
